--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "@ymkz/stylelint-config": "^1.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.8.0",
+    "husky": "^4.2.1",
+    "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "prettier-package-json": "^2.1.3",
     "stylelint": "^13.1.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yarnhook": "^0.4.3"
   },
   "engines": {
     "node": "12.x"
