--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,15 @@
   "emmet.excludeLanguages": ["markdown", "javascript", "javascriptreact", "typescript", "typescriptreact"],
   "eslint.enable": true,
   "eslint.packageManager": "yarn",
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+  "eslint.workingDirectories": [
+    { "directory": "packages/micro-obserbavles", "changeProcessCWD": true },
+    { "directory": "packages/nextjs-effector", "changeProcessCWD": true },
+    { "directory": "packages/react-redux", "changeProcessCWD": true }
+  ],
   "less.validate": false,
   "scss.validate": false,
-  "search.exclude": { "**/.next": true, "**/node_modules": true },
+  "search.exclude": { "**/.next": true, "dist": true, "**/node_modules": true },
   "stylelint.enable": true,
   "[javascript]": { "editor.formatOnSave": false },
   "[javascriptreact]": { "editor.formatOnSave": false },
