fix: purge import config from eslint due to workspace not resolve deps

--- a/package.json
+++ b/package.json
@@ -18,30 +18,31 @@
   ],
   "scripts": {
     "build": "yarn workspaces run build",
+    "build:micro-observables": "yarn workspace micro-observables build",
+    "build:nextjs-effector": "yarn workspace nextjs-effector build",
+    "build:react-redux": "yarn workspace react-redux build",
+    "dev:micro-observables": "yarn workspace micro-observables dev",
+    "dev:nextjs-effector": "yarn workspace nextjs-effector dev",
+    "dev:react-redux": "yarn workspace react-redux dev",
+    "lint": "run-p lint:*",
     "lint:css": "yarn workspaces run lint:css",
     "lint:js": "yarn workspaces run lint:js",
-    "micro-observables:build": "yarn workspace @frontend-shooting-range/micro-observables build",
-    "micro-observables:dev": "yarn workspace @frontend-shooting-range/micro-observables dev",
-    "nextjs-effector:build": "yarn workspace @frontend-shooting-range/nextjs-effector build",
-    "nextjs-effector:dev": "yarn workspace @frontend-shooting-range/nextjs-effector dev",
-    "react-redux:build": "yarn workspace @frontend-shooting-range/react-redux build",
-    "react-redux:dev": "yarn workspace @frontend-shooting-range/react-redux dev",
     "typecheck": "yarn workspaces run typecheck"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@types/node": "^13.9.4",
-    "@types/react": "^16.9.25",
-    "@types/react-dom": "^16.9.5",
+    "@secretlint/secretlint-rule-preset-recommend": "^1.0.1",
     "@ymkz/eslint-config": "^1.4.0",
     "@ymkz/prettier-config": "^1.1.0",
     "@ymkz/stylelint-config": "^1.1.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
-    "lint-staged": "^10.0.9",
+    "lint-staged": "^10.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.2",
     "prettier-package-json": "^2.1.3",
+    "secretlint": "^1.0.1",
     "stylelint": "^13.2.1",
     "typescript": "^3.8.3",
     "yarnhook": "^0.4.3"
