--- a/packages/micro-observables/package.json
+++ b/packages/micro-observables/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@frontend-shooting-range/micro-observables",
+  "name": "micro-observables",
   "description": "ymkz's frontend shooting range",
   "license": "MIT",
   "author": "ymkz <ymkzly@gmail.com> (https://github.com/ymkz)",
@@ -33,10 +33,13 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/node": "^13.9.5",
+    "@types/react": "^16.9.27",
+    "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "html-webpack-plugin": "^4.0.2",
+    "html-webpack-plugin": "^4.0.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
