--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,5 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["dist", "node_modules"],
-  "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.tsx"]
+  "exclude": [".next", "dist", "node_modules"]
 }
